--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ next-env.d.ts
 
 # Sentry Config File
 .env.sentry-build-plugin
+
+# Ignore large files
+my-app/node_modules/@next/swc-darwin-x64/next-swc.darwin-x64.node
